# homeworks

./: README.md  manage.py  pyproject.toml
apps/: settings.py  urls.py
apps/common/: constants.py
apps/common/management/commands/: resetapptables.py
apps/django/hw1/: apps.py  views.py
apps/django/hw2/: admin.py  apps.py  recipes.json  urls.py  views.py
apps/django/hw2/templates/hw2/: recipe.html
apps/django/hw3/: apps.py  views.py
apps/django/hw3/management/commands/: import_phones.py
apps/django/hw3/templates/hw3/: phones.html
apps/django/hw4/: apps.py  articles.json  models.py  views.py
apps/django/hw4/migrations/: 0001_initial.py
apps/django/hw4/templates/hw4/: courses.html  news.html
apps/django/hw5/: apps.py  models.py  urls.py  views.py
apps/django/hw6/: apps.py  models.py  urls.py  views.py
apps/django/hw6/migrations/: 0001_initial.py
apps/django/hw6/templates/hw6/: goods.html
config/: .env.template  secret_key.py
server/: settings.py  urls.py
server/apps/django/hw1/: apps.py  urls.py  views.py
server/apps/django/hw2/: apps.py  models.py  views.py
server/apps/django/hw3/: apps.py  models.py  urls.py  views.py
server/apps/django/hw4/: admin.py  apps.py  urls.py  views.py
server/apps/django/hw5/: apps.py  sensors.json  serializers.py  views.py
server/apps/django/hw6/: apps.py  serializers.py  views.py
server/common/: apps.py  views.py
server/common/management/commands/: resetall.py
server/common/templates/common/: index.html  menu.html
templates/rest_framework/: api.html
(+10 files in other folders)
